@@ -176,6 +176,11 @@ class VS200xToolsetBase(VSToolsetBase):
     #: Whether Detect64BitPortabilityProblems is supported
     detect_64bit_problems = True
 
+    @classmethod
+    def properties_target(cls):
+        for p in cls.properties_target_vsbase():
+            yield p
+
     def gen_for_target(self, target, project):
         root = Node("VisualStudioProject")
         root["ProjectType"] = "Visual C++"
